<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonGenericStatus" Id="{d9929613-41ac-0d2a-1266-eaf6e670b6d8}">
    <Declaration><![CDATA[TYPE TcoTixonGenericStatus : STRUCT
    ActionDescription : STRING(100);
    {attribute addProperty Name "<#Component is ready#>"}
    ComponentReady : BOOL;
    {attribute addProperty Name "<#Tixon controller in auto#> - i1"}
    ControllerInAuto : BOOL;
    {attribute addProperty Name "<#Feeder has components#> - i2"}
    NotEmptyFeeder : BOOL;
    {attribute addProperty Name "<#Separator in home position#> - i3"}
    SeparatorHomePos : BOOL;
    {attribute addProperty Name "<#Filing sensor#> - i4"}
    FillingSensor : BOOL;
    {attribute addProperty Name "<#Separator present#> - i5"}
    SeparatorPresent : BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>